Adding Alexandre Gaigalas, from Yahoo to the list of Heroes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>BrazilJS Conf 2013</title>
+        <title>BrazilJS Conf 2013 - dias 22 e 23 de agosto!</title>
         <meta name="description" content="BrazilJS Conf 2013 - dias 22 e 23 de agosto! A maior conferência de javascript do universo em sua edição 2013!" />
         <meta name="author" content="marimbondo.me - Web com gominho :)" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png" />
@@ -117,12 +117,14 @@
 								</a>
 							</li>
 							<li>
-								<div class="AB hero">
-									<div class="info">
-										<strong class="hero-name">???</strong>
-										<em class="hero-company">???</em>										
-									</div>
-								</div>
+                                <a class="hero alexandre-gaigalas" href="http://braziljs.com.br/speakers/alexandre" title="Saiba mais sobre o palestrante Alexandre Gaigalas" data-layer='2'>
+                                    <span class="spikes">&nbsp;</span>
+                                    <div class="info">
+                                        <strong class="hero-name" itemprop="performer">Alexandre Gaigalas</strong>
+                                        <em class="hero-company">yahoo!</em>                                     
+                                    </div>
+                                    <span class="photo">&nbsp;</span>
+                                </a>
 							</li>
 							<li>
 								<div class="hero LV">
@@ -133,7 +135,7 @@
 								</div>
 							</li>
 							<li>
-								<a class="hero thibault-imbert" href="http://braziljs.com.br/speakers/thibault" title="Saiba mais sobre o palestrante Thibault Imbert" data-layer='2'>
+								<a class="hero thibault-imbert" href="http://braziljs.com.br/speakers/thibault" title="Saiba mais sobre o palestrante Thibault Imbert" data-layer='3'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Thibault Imbert</strong>
@@ -143,7 +145,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="hero robert-nyman" href="http://braziljs.com.br/speakers/robert" title="Saiba mais sobre o palestrante Robert Nyman" data-layer='3'>
+								<a class="hero robert-nyman" href="http://braziljs.com.br/speakers/robert" title="Saiba mais sobre o palestrante Robert Nyman" data-layer='4'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Robert Nyman</strong>
@@ -161,7 +163,7 @@
 								</div>
 							</li>
 							<li>
-								<a class="hero marcel-angus" href="http://braziljs.com.br/speakers/angus-marcel" title="Saiba mais sobre os palestrantes Marcel Duran e Angus Croll" data-layer='4'>
+								<a class="hero marcel-angus" href="http://braziljs.com.br/speakers/angus-marcel" title="Saiba mais sobre os palestrantes Marcel Duran e Angus Croll" data-layer='5'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performers">angus croll &amp;&amp; marcel duran</strong>
@@ -187,7 +189,7 @@
 								</div>
 							</li>
 							<li>
-								<a class="hero stoyan-stefanov" href="http://braziljs.com.br/speakers/stoyan" title="Saiba mais sobre o palestrante Stoyan Stefanov" data-layer='5'>
+								<a class="hero stoyan-stefanov" href="http://braziljs.com.br/speakers/stoyan" title="Saiba mais sobre o palestrante Stoyan Stefanov" data-layer='6'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Stoyan Stefanov</strong>
@@ -197,7 +199,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="hero caridy-patino" href="http://braziljs.com.br/speakers/caridy" title="Saiba mais sobre o palestrante Caridy Patino" data-layer='6'>
+								<a class="hero caridy-patino" href="http://braziljs.com.br/speakers/caridy" title="Saiba mais sobre o palestrante Caridy Patino" data-layer='7'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Caridy Patino</strong>
@@ -223,7 +225,7 @@
 								</div>
 							</li>
 							<li>
-								<a class="hero renato-mangini" href="http://braziljs.com.br/speakers/renato" title="Saiba mais sobre o palestrante Renato Mangini" data-layer='7'>
+								<a class="hero renato-mangini" href="http://braziljs.com.br/speakers/renato" title="Saiba mais sobre o palestrante Renato Mangini" data-layer='8'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Renato Mangini</strong>
@@ -266,6 +268,37 @@
 									</ul>
 								</div>
 							</li>
+                            <li id="alexandre" itemscope itemtype="http://schema.org/Person">
+                                <div class="portrait">
+                                    <span class="photo">&nbsp;</span>
+                                    <ul class="share">
+                                        <li><div class="fb-like" data-href="http://braziljs.com.br/speakers/alexandre.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+                                        <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/alexandre.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+                                        <li><div class="g-plusone" data-size="tall" data-href="http://braziljs.com.br/speakers/alexandre.html"></div></li>
+                                    </ul>
+                                </div>
+                                <div class="speaker">
+                                    <div class="info">
+                                        <h3 class="name" itemprop="name">Alexandre Gaigalas</h3>
+                                        <em class="company" itemprop="worksFor">Yahoo!</em>
+                                        <div class="information" itemprop="description">
+                                            <span class="spacer">&nbsp;</span>
+                                            <p>Alexande Gaigalas é <span itemprop="jobTitle">desenvolvedor</span> no Yahoo! Brasil, entusiasta de arquiteturas RESTful e Web Semântica.</p>
+                                        </div>
+                                    </div>
+                                    <ul class="social-networks">
+                                        <li>
+                                            <a class="github ir ico-general" href="https://github.com/alganet" title="Acesse o gitHub de Alexandre Gaigalas">linkedin</a>
+                                        </li>
+                                        <li class="twitter">
+                                            <a class="twitter ir ico-general" href="https://twitter.com/alganet" title="Acesse o Twitter de Alexandre">Twitter</a>
+                                        </li>                                        
+                                        <li class="blog">
+                                            <a class="blog ir ico-general" itemprop="url" href="http://gaigalas.net/" title="Alexandre Gaigalas e a web">gaigalas.net</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>							
 							<li id="thibault" itemscope itemtype="http://schema.org/Person">
 								<div class="portrait">
 									<span class="photo">&nbsp;</span>
