--- a/speakers/alexandre.html
+++ b/speakers/alexandre.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>Thibault Imbert - BrazilJS 2013</title>
-        <meta name="description" content="BrazilJS Conf 2013 - Thibault Imbert" />
+        <title>Alexandre Gaigalas - BrazilJS 2013</title>
+        <meta name="description" content="BrazilJS Conf 2013 - Alexandre Gaigalas" />
         <meta name="author" content="marimbondo.me - Web com gominho :)" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png" />
         <link rel="icon" href="../facebook.png" type="image/x-icon">        
@@ -30,20 +30,20 @@
         <!-- OPEN GRAPH -->
         <meta property="og:url" content="http://braziljs.com.br/speakers/thibault.html" />
         <meta property="og:type" content="Website" /> 
-        <meta property="og:title" content="Thibault Imbert - BrazilJS 2013" /> 
+        <meta property="og:title" content="Alexandre Gaigalas - BrazilJS 2013" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
-        <meta property="og:description" content="Venha assistir a palestra de Thibault Imbert na BrazilJS Conf - 2013!" />
+        <meta property="og:description" content="Eu vou assistir a palestra de Alexandre Gaigalas na BrazilJS Conf - 2013!" />
 		<meta property="fb:admins" content="1114477480" /> 
 		<meta property="fb:app_id" content="136223956547034" /> 
 		<meta property="og:site_name" content="BrazilJS Conference" />
 
     </head>
-    <body class="thibault">
+    <body class="alexandre">
     	<div class="wrapper">    		
 			<div id="speakers">
 				<div class="speakers-wrapper">
 					<span class="burst">&nbsp;</span>
-					<span class="speaker ir">Olá meu nome é Thibault Imbert</span>
+					<span class="speaker ir">Olá meu nome é Alexandre Gaigalas</span>
 					<div class="ballons">
 						<span class="calling what">vem ver minha palestra...</span>
 						<span class="calling where">... na <b>brazilJs conf!!</b></span>
@@ -54,33 +54,30 @@
 			</div>
 			<div class="speaker-info">
 				<div class="info-container">
-					<h1 class="name" itemprop="name">Thibault Imbert</h1>
-					<strong class="company" itemprop="worksFor">Adobe</strong>					
+					<h1 class="name" itemprop="name">Alexandre Gaigalas</h1>
+					<strong class="company" itemprop="worksFor">Yahoo!</strong>					
 				</div>
 				<div id="social-networks">
 					<strong class="like-it ir ico-general">Curtiu? Compartilha!</strong>
 					<ul>
-						<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/thibault.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
-						<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/thibault" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+						<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/alexandre.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+						<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/alexandre" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
 						<li><div class="g-plusone" data-size="tall"></div></li>
 					</ul>
 				</div>
 				<div class="description" itemprop="description">
-					<p>Thibault Imbert gerencia um grupo de produtos para plataforma web focado em gráficos, JavaScript e Adobe Scout, a próxima geração de ferramentas de profiling para tecnologias web.</p>
-					<p>Thibault lançou em 2008 um free e-book sobre Action Script 3 chamado Pratique d'ActionScript 3. Em 2010, Thibault liderou o Stage3D, que revolucionou os gráficos em Flash, dando muito mais poder para games como FarmVille 2, Angry Birds ou Kings Road no Facebook. Ele recentemente escreveu um livro chamado "Introducing Starling", sobre o framework Starling, liderado por ele para prover aceleração 2D via GPU utilizando Stage3D.</p>
-					<p>Liderando o time Scout da Adobe, tem o objetivo de mudar a forma como desenvolvedores criam profiles para conteúdos web.</p>
-					<p>Além disso, escreveu um emulador Intel 8080 em ActionScript, e o traduziu para JavaScript.</p>
+					<p>Alexande Gaigalas é <span itemprop="jobTitle">desenvolvedor</span> no Yahoo! Brasil, entusiasta de arquiteturas RESTful e Web Semântica.</p>
 				</div>
 				<h2 class="find-me">Nas redes sociais:</h2>
 				<ul class="my-social-links">
 					<li>
-						<a class="github" href="https://github.com/thibaultimbert/" title="github">github</a>
+						<a class="github" href="https://github.com/alganet" title="Acesse o gitHub de Alexandre Gaigalas">github</a>
 					</li>
 					<li>
-						<a class="twitter" href="https://twitter.com/thibault_imbert" title="Twitter">Twitter</a>
+						<a class="twitter" href="https://twitter.com/alganet" title="Acesse o Twitter de Alexandre">Twitter</a>
 					</li>
 					<li>
-						<a class="blog" href="http://typedarray.org/" title="Typedarray.org" itemprop="url">http://typedarray.org/</a>
+						<a class="blog" href="http://gaigalas.net/" title="Alexandre Gaigalas e a web" itemprop="url">gaigalas.net</a>
 					</li>															
 				</ul>
 				<a href="//www.braziljs.com.br" title="Home" class="home-container">
