--- a/speakers/angus.html
+++ b/speakers/angus.html
@@ -55,7 +55,7 @@
 			<div class="speaker-info">
 				<div class="info-container">
 					<h1 class="name" itemprop="name">Angus Croll</h1>
-					<strong class="company" itemprop="worksFor">Twitter</strong>					
+					<strong class="company" itemprop="worksFor">Mozilla</strong>					
 				</div>
 				<div id="social-networks">
 					<strong class="like-it ir ico-general">Curtiu? Compartilha!</strong>
