--- a/speakers/alexandre.html
+++ b/speakers/alexandre.html
@@ -21,14 +21,14 @@
         <link rel="stylesheet" href="../css/main.css" />
         <link rel="stylesheet" href="css/context.css" />
         <link type="text/plain" rel="author" href="humans.txt" />
-        <link rel="canonical" href="http://braziljs.com.br/speakers/thibault.html" />
+        <link rel="canonical" href="http://braziljs.com.br/speakers/alexandre.html" />
 
         <!--[if lt IE 9]>
                 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
         <!-- OPEN GRAPH -->
-        <meta property="og:url" content="http://braziljs.com.br/speakers/thibault.html" />
+        <meta property="og:url" content="http://braziljs.com.br/speakers/alexandre.html" />
         <meta property="og:type" content="Website" /> 
         <meta property="og:title" content="Alexandre Gaigalas - BrazilJS 2013" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
