Adding Demian Borba to the website

--- a/index.html
+++ b/index.html
@@ -127,15 +127,17 @@
                                 </a>
 							</li>
 							<li>
-								<div class="hero LV">
-									<div class="info">
-										<strong class="hero-name">???</strong>
-										<em class="hero-company">???</em>										
-									</div>
-								</div>
+                                <a class="hero demian-borba" href="http://braziljs.com.br/speakers/demian" title="Saiba mais sobre o palestrante Demian Borba" data-layer='3'>
+                                    <span class="spikes">&nbsp;</span>
+                                    <div class="info">
+                                        <strong class="hero-name" itemprop="performer">Demian Borba</strong>
+                                        <em class="hero-company">BlackBerry</em>                                     
+                                    </div>
+                                    <span class="photo">&nbsp;</span>
+                                </a>
 							</li>
 							<li>
-								<a class="hero thibault-imbert" href="http://braziljs.com.br/speakers/thibault" title="Saiba mais sobre o palestrante Thibault Imbert" data-layer='3'>
+								<a class="hero thibault-imbert" href="http://braziljs.com.br/speakers/thibault" title="Saiba mais sobre o palestrante Thibault Imbert" data-layer='4'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Thibault Imbert</strong>
@@ -145,7 +147,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="hero robert-nyman" href="http://braziljs.com.br/speakers/robert" title="Saiba mais sobre o palestrante Robert Nyman" data-layer='4'>
+								<a class="hero robert-nyman" href="http://braziljs.com.br/speakers/robert" title="Saiba mais sobre o palestrante Robert Nyman" data-layer='5'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Robert Nyman</strong>
@@ -163,7 +165,7 @@
 								</div>
 							</li>
 							<li>
-								<a class="hero marcel-angus" href="http://braziljs.com.br/speakers/angus-marcel" title="Saiba mais sobre os palestrantes Marcel Duran e Angus Croll" data-layer='5'>
+								<a class="hero marcel-angus" href="http://braziljs.com.br/speakers/angus-marcel" title="Saiba mais sobre os palestrantes Marcel Duran e Angus Croll" data-layer='6'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performers">angus croll &amp;&amp; marcel duran</strong>
@@ -189,7 +191,7 @@
 								</div>
 							</li>
 							<li>
-								<a class="hero stoyan-stefanov" href="http://braziljs.com.br/speakers/stoyan" title="Saiba mais sobre o palestrante Stoyan Stefanov" data-layer='6'>
+								<a class="hero stoyan-stefanov" href="http://braziljs.com.br/speakers/stoyan" title="Saiba mais sobre o palestrante Stoyan Stefanov" data-layer='7'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Stoyan Stefanov</strong>
@@ -199,7 +201,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="hero caridy-patino" href="http://braziljs.com.br/speakers/caridy" title="Saiba mais sobre o palestrante Caridy Patino" data-layer='7'>
+								<a class="hero caridy-patino" href="http://braziljs.com.br/speakers/caridy" title="Saiba mais sobre o palestrante Caridy Patino" data-layer='8'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Caridy Patino</strong>
@@ -225,7 +227,7 @@
 								</div>
 							</li>
 							<li>
-								<a class="hero renato-mangini" href="http://braziljs.com.br/speakers/renato" title="Saiba mais sobre o palestrante Renato Mangini" data-layer='8'>
+								<a class="hero renato-mangini" href="http://braziljs.com.br/speakers/renato" title="Saiba mais sobre o palestrante Renato Mangini" data-layer='9'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Renato Mangini</strong>
@@ -298,7 +300,39 @@
                                         </li>
                                     </ul>
                                 </div>
-                            </li>							
+                            </li>
+                            <li id="demian" itemscope itemtype="http://schema.org/Person">
+                                <div class="portrait">
+                                    <span class="photo">&nbsp;</span>
+                                    <ul class="share">
+                                        <li><div class="fb-like" data-href="http://braziljs.com.br/speakers/demian.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+                                        <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/demian.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+                                        <li><div class="g-plusone" data-size="tall" data-href="http://braziljs.com.br/speakers/demian.html"></div></li>
+                                    </ul>
+                                </div>
+                                <div class="speaker">
+                                    <div class="info">
+                                        <h3 class="name" itemprop="name">Demian Borba</h3>
+                                        <em class="company" itemprop="worksFor">BlackBerry</em>
+                                        <div class="information" itemprop="description">
+                                            <span class="spacer">&nbsp;</span>
+                                            <p>Surfista, <span itemprop="jobtitle">professor</span>da Universidade da California San Diego (UCSD) e <span itemprop="jobtitle">Developer Evangelist</span> na BlackBerry, com foco em HTML5 e UI Design.</p>
+                                            <p>Em 2012, recebeu o prêmio "Must See BlackBerry Developer Evangelist", competição global entre todos os evangelistas da BlackBerry, e venceu uma das maiores competições para developers nos Estados Unidos, o AT&T® Mobile App Hackathon em Las Vegas</p>
+                                        </div>
+                                    </div>
+                                    <ul class="social-networks">
+                                        <li>
+                                            <a class="github ir ico-general" href="https://github.com/demianborba" title="Acesse o gitHub de Demian">linkedin</a>
+                                        </li>
+                                        <li class="twitter">
+                                            <a class="twitter ir ico-general" href="https://twitter.com/demianborba" title="Acesse o Twitter de Demian">Twitter</a>
+                                        </li>                                        
+                                        <li class="blog">
+                                            <a class="blog ir ico-general" itemprop="url" href="http://dborba.com/" title="Acesse o blog de Demian Borba">dborba.com</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>                            							
 							<li id="thibault" itemscope itemtype="http://schema.org/Person">
 								<div class="portrait">
 									<span class="photo">&nbsp;</span>
