--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     					<a href="#tickets" title="Ir para a área de inscrições"><span class="ir ico-general sign">Inscrições</span></a>
     					<span class="extended-menu">inscrições</span>
     				</li>    	
-    				<!--li class="manifest">
+    				<li class="manifest">
     					<a href="#manifest" title="Ir para a área de do manifesto"><span class="ir ico-general sign">Manifesto</span></a>
     					<span class="extended-menu">manifesto</span>
-    				</li-->    	    							    				
+    				</li>    	    							    				
     			</ul>
     		</nav>
     		<div id="speakers">
@@ -175,12 +175,14 @@
 								</a>
 							</li>
 							<li>
-								<div class="hero PI">
-									<div class="info">
-										<strong class="hero-name">???</strong>
-										<em class="hero-company">???</em>										
-									</div>
-								</div>
+                                <a class="hero rey-josh" href="http://braziljs.com.br/speakers/rey-josh" title="Saiba mais sobre os palestrantes Rey Bango e Josh Holmes" data-layer='7'>
+                                    <span class="spikes">&nbsp;</span>
+                                    <div class="info">
+                                        <strong class="hero-name" itemprop="performers">rey bango &amp;&amp; josh holmes</strong>
+                                        <em class="hero-company">Microsoft</em>
+                                    </div>
+                                    <span class="photo">&nbsp;</span>
+                                </a>
 							</li>
 							<li>
 								<div class="hero JW">									
@@ -191,7 +193,7 @@
 								</div>
 							</li>
 							<li>
-								<a class="hero stoyan-stefanov" href="http://braziljs.com.br/speakers/stoyan" title="Saiba mais sobre o palestrante Stoyan Stefanov" data-layer='7'>
+								<a class="hero stoyan-stefanov" href="http://braziljs.com.br/speakers/stoyan" title="Saiba mais sobre o palestrante Stoyan Stefanov" data-layer='8'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Stoyan Stefanov</strong>
@@ -201,7 +203,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="hero caridy-patino" href="http://braziljs.com.br/speakers/caridy" title="Saiba mais sobre o palestrante Caridy Patino" data-layer='8'>
+								<a class="hero caridy-patino" href="http://braziljs.com.br/speakers/caridy" title="Saiba mais sobre o palestrante Caridy Patino" data-layer='9'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Caridy Patino</strong>
@@ -227,7 +229,7 @@
 								</div>
 							</li>
 							<li>
-								<a class="hero renato-mangini" href="http://braziljs.com.br/speakers/renato" title="Saiba mais sobre o palestrante Renato Mangini" data-layer='9'>
+								<a class="hero renato-mangini" href="http://braziljs.com.br/speakers/renato" title="Saiba mais sobre o palestrante Renato Mangini" data-layer='10'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Renato Mangini</strong>
@@ -316,7 +318,7 @@
                                         <em class="company" itemprop="worksFor">BlackBerry</em>
                                         <div class="information" itemprop="description">
                                             <span class="spacer">&nbsp;</span>
-                                            <p>Surfista, <span itemprop="jobtitle">professor</span>da Universidade da California San Diego (UCSD) e <span itemprop="jobtitle">Developer Evangelist</span> na BlackBerry, com foco em HTML5 e UI Design.</p>
+                                            <p>Surfista, <span itemprop="jobtitle">professor</span> da Universidade da California San Diego (UCSD) e <span itemprop="jobtitle">Developer Evangelist</span> na BlackBerry, com foco em HTML5 e UI Design.</p>
                                             <p>Em 2012, recebeu o prêmio "Must See BlackBerry Developer Evangelist", competição global entre todos os evangelistas da BlackBerry, e venceu uma das maiores competições para developers nos Estados Unidos, o AT&T® Mobile App Hackathon em Las Vegas</p>
                                         </div>
                                     </div>
@@ -402,9 +404,9 @@
 								<div class="portrait">
 									<span class="photo">&nbsp;</span>
 									<ul class="share">
-										<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/angus.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
-										<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/angus.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
-										<li><div class="g-plusone" data-size="tall" data-href="http://braziljs.com.br/speakers/angus.html"></div></li>
+										<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/http://braziljs.com.br/speakers/angus-marcel.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+										<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/angus-marcel.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+										<li><div class="g-plusone" data-size="tall" data-href="http://braziljs.com.br/speakers/angus-marcel.html"></div></li>
 									</ul>
 								</div>
 								<div class="speaker">
@@ -437,7 +439,44 @@
 										</li>
 									</ul>									
 								</div>																
-							</li>							
+							</li>
+                            <li id="ray-josh">
+                                <div class="portrait">
+                                    <span class="photo">&nbsp;</span>
+                                    <ul class="share">
+                                        <li><div class="fb-like" data-href="http://braziljs.com.br/speakers/ray-josh.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+                                        <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/ray-josh.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+                                        <li><div class="g-plusone" data-size="tall" data-href="http://braziljs.com.br/speakers/ray-josh.html"></div></li>
+                                    </ul>
+                                </div>
+                                <div class="speaker">
+                                    <div class="info">
+                                        <h3 class="name">Ray Bango &amp;&amp; Josh Holmes</h3>
+                                        <em class="company">Microsoft</em>
+                                        <div class="information">
+                                            <span class="spacer">&nbsp;</span>
+                                                <p>Rey tem como foco criar conhecimento para o client-side, desenvolvimento baseado em padrões e ajudar a Microsoft atender as necessidades da comunidade de desenvolvimento web</p>
+                                                <p>Josh, atualmente está empregado pela Microsoft como gerente no time do Internet Explorer.</p>
+                                        </div>
+                                    </div>
+                                    <ul class="social-networks">
+                                        <li>
+                                            <a class="github ir ico-general" href="https://github.com/reybango" title="Acesse o github de Rey Bango">github</a>
+                                        </li>
+                                        <li class="twitter">
+                                            <a class="twitter ir ico-general" href="https://twitter.com/reybango" title="Acesse o Twitter de Rey Bango">Twitter</a>
+                                        </li>
+                                    </ul>
+                                    <ul class="social-networks">
+                                        <li>
+                                            <a class="github ir ico-general" href="https://github.com/joshholmes" title="Acesse o github de Josh Holmes">github</a>
+                                        </li>
+                                        <li class="twitter">
+                                            <a class="blog ir ico-general" href="http://www.joshholmes.com/blog/" title="Acesse o site pessoal de Josh Holmes">joshholmes.com</a>
+                                        </li>
+                                    </ul>                                   
+                                </div>                                                              
+                            </li>														
 							<li id="stoyan" itemscope itemtype="http://schema.org/Person">
 								<div class="portrait">
 									<span class="photo">&nbsp;</span>
@@ -533,7 +572,7 @@
 										</li>
 									</ul>
 								</div>																
-							</li>																																			
+							</li>																																										
 						</ul>					
 						<button class="next ir ico-general">ir para o próximo palestrante<span class="sign ico-general">&nbsp;</span></button>
 						<button class="close ir ttl-general">fechar a overlay</button>
@@ -622,6 +661,29 @@
 						<span class="corner-shadow">&nbsp;</span>
 						<p class="gogogo ir ttl-general">Faça parte deste grande evento. A BrazilJS Conf 2013 será imperdível!</p>
 					</div>
+				</section>
+				<section id="manifest">
+				    <div class="manifest-wrapper clearfix">
+				        <h2 class="ttl-general title ir">Manifesto</h2>
+				        <div class="the-origin our-history">
+				            <strong class="ir ttl-general moto">BrazilJS: unidos cresceremos</strong>
+				            <p class="disclaimer">A IDEIA DO BRAZILJS SURGIU EM MEADOS DE 2008. MUITOS EVENTOS DE TECNOLOGIA E DE DIVERSAS LINGUAGENS DIFERENTES ESTAVAM ACONTECENDO NA ÉPOCA. JAYDSON E FELIPE SEMPRE FORAM ENTUSIASTAS JAVASCRIPT, E SENTIRAM A FALTA DE UMA CONFERÊNCIA FOCADA NA LINGUAGEM, QUE PARA ELES, TINHA UM FUTURO PROMISSOR.</p>
+				            <p class="disclaimer">POUCO TEMPO DEPOIS, EM 2009, NASCEU A PRIMEIRA CONFERÊNCIA JAVASCRIPT, A JSCONF AMERICANA. DURANTE O ANO DE 2010 A IDEIA EVOLUIU E CHRISTIANO MILFONT ESTAVA PENSANDO NO MESMO, FAZER UMA CONFERÊNCIA JAVASCRIPT NACIONAL...</p>				            
+				        </div>
+				        <div class="the-future our-history">
+				            <p class="disclaimer">...UNINDO FORÇAS, JAYDSON, FELIPE E CHRISTIANO CONSEGUIRAM EM 2011 FAZER A PRIMEIRA CONFERÊNCIA JAVASCRIPT DO BRASIL.</p>
+				            <p class="disclaimer">NA SUA ESTREIA, EM MAIO DE 2011, O BRAZILJS SE TORNOU UM DOS MAIORES EVENTOS JAVASCRIPT DO MUNDO, CONTANDO COM 600 PARTICIPANTES E MAIS DE 20 PALESTRAS. EM 2013, TEREMOS A TERCEIRA EDIÇÃO DO EVENTO E TEMOS O OBJETIVO OUSADO DE NOS TORNAR A MAIOR CONFERÊNCIA JAVASCRIPT DO MUNDO!</p>
+				        </div>
+				    </div>
+				</section>				
+				<section id="sponsors">&nbsp;</section>
+				<section id="follow-us">
+				    <div class="follow-us-container">
+				        <h2 class="ttl-general ir title">Veja o que andam falando da gente no twitter! Falê você também usando a hashtag #braziljs</h2>
+				        <span class="burst">&nbsp;</span>
+				        <div id="tweets-container">&nbsp;</div>
+				        <strong class="at-braziljs"><i class="ico-general ir birdy"></i><a href="https://twitter.com/braziljs" rel="external" class="ttl-general ir our-link" >E nos siga em @Braziljs!</a></strong>
+				    </div>
 				</section>
 				<section id="the-guys">
 					<div class="the-guys-container">
