--- a/index.html
+++ b/index.html
@@ -444,14 +444,14 @@
                                 <div class="portrait">
                                     <span class="photo">&nbsp;</span>
                                     <ul class="share">
-                                        <li><div class="fb-like" data-href="http://braziljs.com.br/speakers/ray-josh.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
-                                        <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/ray-josh.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
-                                        <li><div class="g-plusone" data-size="tall" data-href="http://braziljs.com.br/speakers/ray-josh.html"></div></li>
+                                        <li><div class="fb-like" data-href="http://braziljs.com.br/speakers/rey-josh.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+                                        <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/rey-josh.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+                                        <li><div class="g-plusone" data-size="tall" data-href="http://braziljs.com.br/speakers/rey-josh.html"></div></li>
                                     </ul>
                                 </div>
                                 <div class="speaker">
                                     <div class="info">
-                                        <h3 class="name">Ray Bango &amp;&amp; Josh Holmes</h3>
+                                        <h3 class="name">Rey Bango &amp;&amp; Josh Holmes</h3>
                                         <em class="company">Microsoft</em>
                                         <div class="information">
                                             <span class="spacer">&nbsp;</span>
