Adding one more awesome speaker to BrazilJS Conf website, Jean Carlo Emer...also adding the missing image of rey and josh

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				</div>
 				<main role="main" class="clearfix">
 					<strong class="what" itemprop="description">A maior conferência de javascript do universo!</strong>
-					<strong class="where">22 E 23 DE AGOSTO <br/> TEATRO DO BOURBON COUNTRY PORTO ALEGRE/RS</strong>						
+					<strong class="where">22 E 23 DE AGOSTO <br/> TEATRO DO BOURBON COUNTRY PORTO ALEGRE/RS</strong>
 				</main>
 				<section id="heroes">
 					<div class="heroes-wrapper">
@@ -221,15 +221,17 @@
 								</div>
 							</li>
 							<li>
-								<div class="hero BW">
-									<div class="info">
-										<strong class="hero-name">???</strong>
-										<em class="hero-company">???</em>										
-									</div>
-								</div>
+                                <a class="hero jean-carlo" href="http://braziljs.com.br/speakers/jean" title="Saiba mais sobre o palestrante Jean Carlo Emer" data-layer='10'>
+                                    <span class="spikes">&nbsp;</span>
+                                    <div class="info">
+                                        <strong class="hero-name" itemprop="performer">Jean Carlo Emer</strong>
+                                        <em class="hero-company">Codeminer 42</em>
+                                    </div>
+                                    <span class="photo">&nbsp;</span>
+                                </a>
 							</li>
 							<li>
-								<a class="hero renato-mangini" href="http://braziljs.com.br/speakers/renato" title="Saiba mais sobre o palestrante Renato Mangini" data-layer='10'>
+								<a class="hero renato-mangini" href="http://braziljs.com.br/speakers/renato" title="Saiba mais sobre o palestrante Renato Mangini" data-layer='11'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Renato Mangini</strong>
@@ -404,7 +406,7 @@
 								<div class="portrait">
 									<span class="photo">&nbsp;</span>
 									<ul class="share">
-										<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/http://braziljs.com.br/speakers/angus-marcel.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+										<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/angus-marcel.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
 										<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/angus-marcel.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
 										<li><div class="g-plusone" data-size="tall" data-href="http://braziljs.com.br/speakers/angus-marcel.html"></div></li>
 									</ul>
@@ -542,6 +544,39 @@
 									</ul>
 								</div>																
 							</li>
+                            <li id="jean" itemscope itemtype="http://schema.org/Person">
+                                <div class="portrait">
+                                    <span class="photo">&nbsp;</span>
+                                    <ul class="share">
+                                        <li><div class="fb-like" data-href="http://braziljs.com.br/speakers/jean.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+                                        <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/jean.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+                                        <li><div class="g-plusone" data-size="tall" data-href="http://braziljs.com.br/speakers/jean.html"></div></li>
+                                    </ul>
+                                </div>
+                                <div class="speaker">
+                                    <div class="info">
+                                        <h3 class="name" itemprop="name">Jean Carlo Emer</h3>
+                                        <em class="company" itemprop="worksFor">Codeminer 42</em>
+                                        <div class="information" itemprop="description">
+                                            <span class="spacer">&nbsp;</span>
+                                            <p>Jean Carlo Emer é gaúcho, artesão da internet, ilusionista pós-moderno, <span itemprop="jobTitle">desenvolvedor</span> na Codeminer 42 e cientista da computação.</p>
+                                            <p>Adora aprender uma linguagem diferente, seja as do tipo que solucionam problemas aritméticos e lógicos, marcam, estilizam ou geram outras.</p>
+                                            <p>É também um dos criadores da Rye.js e defensor da pluralidade das bibliotecas aspirantes a superar a jQuery.</p>                                            
+                                        </div>
+                                    </div>
+                                    <ul class="social-networks">
+                                        <li>
+                                            <a class="github ir ico-general" href="http://github.com/jcemer" title="Acesse o github de Jean Carlo Emer">github</a>
+                                        </li>
+                                        <li class="twitter">
+                                            <a class="twitter ir ico-general" href="http://twitter.com/jcemer" title="Acesse o Twitter de Jean Carlo Emer">Twitter</a>
+                                        </li>
+                                        <li class="blog">
+                                            <a class="blog ir ico-general" href="http://www.jcemer.com/" title="Acesse o site de Jean Carlo Emer" itemprop="url">jcemer.com/</a>
+                                        </li>
+                                    </ul>
+                                </div>                                                              
+                            </li>							
 							<li id="renato" itemscope itemtype="http://schema.org/Person">
 								<div class="portrait">
 									<span class="photo">&nbsp;</span>
